--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,6 +22,7 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        vectorDrawables.useSupportLibrary = true
     }
     buildscript {
         repositories {
@@ -50,7 +51,7 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.2'
     implementation 'com.google.android.material:material:1.6.1'
-
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
     implementation 'com.airbnb.android:lottie:5.2.0'
     implementation 'com.gauravk.bubblenavigation:bubblenavigation:1.0.7'
 
