--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,19 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.RealtimeAuctionApp" />
+        android:theme="@style/Theme.RealtimeAuctionApp">
+        <activity
+            android:name=".view.ui.WelcomeActivity"
+            android:exported="true"
+            android:theme="@style/Theme.RealtimeAuctionApp.NoActionBar" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
+        <activity android:name=".view.ui.LoginActivity" />
+    </application>
 
 </manifest>
