--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
 
     <application
         android:allowBackup="true"
+        android:usesCleartextTraffic="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
@@ -28,6 +29,7 @@
         </activity>
 
         <activity android:name=".view.ui.activities.LoginActivity" />
+        <activity android:name=".view.ui.activities.MainActivity" />
     </application>
 
 </manifest>
