--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ plugins {
 }
 
 android {
-    compileSdk 33
+    compileSdk 32
 
     buildFeatures {
         dataBinding = true
@@ -20,7 +20,7 @@ android {
     defaultConfig {
         applicationId "com.esteel4u.realtimeauctionapp"
         minSdk 28
-        targetSdk 33
+        targetSdk 32
         versionCode 1
         versionName "1.0"
 
@@ -52,11 +52,12 @@ android {
 
 dependencies {
     implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.appcompat:appcompat:1.4.1'
+    implementation 'androidx.appcompat:appcompat:1.4.2'
+    implementation 'com.google.android.material:material:1.6.1'
 
 
-    implementation 'com.google.android.material:material:1.5.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
+    implementation 'com.google.android.material:material:1.6.1'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'com.airbnb.android:lottie:5.2.0'
     implementation 'com.gauravk.bubblenavigation:bubblenavigation:1.0.7'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.4.2'
@@ -67,14 +68,17 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics-ktx'
     implementation "com.github.ptrbrynt:FirestoreLiveData:1.1.1"
     implementation 'com.google.firebase:firebase-auth-ktx'
-    implementation 'com.google.firebase:firebase-firestore-ktx:24.1.2'
-    implementation 'com.google.firebase:firebase-firestore:21.4.0'
+    implementation 'com.google.firebase:firebase-firestore-ktx:24.2.0'
+    implementation 'com.google.firebase:firebase-firestore:24.2.0'
     implementation 'com.google.firebase:firebase-database-ktx:20.0.5'
     implementation 'com.google.firebase:firebase-database:20.0.5'
-    implementation 'com.gauravk.bubblenavigation:bubblenavigation:1.0.7'
-    implementation 'nl.joery.animatedbottombar:library:1.1.0'
     implementation 'com.github.MoeidHeidari:banner:1.04'
-
+    implementation 'nl.joery.animatedbottombar:library:1.1.0'
+    implementation 'com.gauravk.bubblenavigation:bubblenavigation:1.0.7'
+    implementation 'com.ramotion.garlandview:garland-view:0.3.3'
+    implementation 'com.github.zhpanvip:bannerviewpager:3.5.6'
+    implementation 'com.trello.rxlifecycle2:rxlifecycle:2.2.1'
+    implementation "com.trello.rxlifecycle2:rxlifecycle-components:2.2.1"
 
     compileOnly 'org.projectlombok:lombok:1.18.12'
     annotationProcessor 'org.projectlombok:lombok:1.18.12'
