--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,6 +72,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-firestore:24.2.0'
     implementation 'com.google.firebase:firebase-database-ktx:20.0.5'
     implementation 'com.google.firebase:firebase-database:20.0.5'
+    implementation 'com.firebaseui:firebase-ui-firestore:4.3.1'
     implementation 'com.github.MoeidHeidari:banner:1.04'
     implementation 'nl.joery.animatedbottombar:library:1.1.0'
     implementation 'com.gauravk.bubblenavigation:bubblenavigation:1.0.7'
@@ -80,8 +81,17 @@ dependencies {
     implementation 'com.trello.rxlifecycle2:rxlifecycle:2.2.1'
     implementation "com.trello.rxlifecycle2:rxlifecycle-components:2.2.1"
 
+    implementation 'com.google.dagger:dagger:2.42'
+    implementation 'com.google.dagger:dagger-android-support:2.42'
+    implementation 'com.google.dagger:dagger-android-processor:2.42'
+    implementation 'androidx.fragment:fragment-ktx:1.5.0'
+
+    implementation 'com.scwang.smartrefresh:SmartRefreshHeader:1.1.0'
+    implementation 'com.scwang.smartrefresh:SmartRefreshLayout:1.1.0'
+
     compileOnly 'org.projectlombok:lombok:1.18.12'
     annotationProcessor 'org.projectlombok:lombok:1.18.12'
+
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
