--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,7 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+
 }
 
 
@@ -64,7 +65,7 @@ dependencies {
     implementation 'androidx.navigation:navigation-ui-ktx:2.4.2'
     implementation 'com.github.markushi:circlebutton:1.1'
     implementation 'com.jaeger.statusbarutil:library:1.5.1'
-
+    implementation 'com.allattentionhere:fabulousfilter:0.0.5'
 
     implementation platform('com.google.firebase:firebase-bom:30.1.0')
     implementation 'com.google.firebase:firebase-analytics-ktx'
@@ -95,6 +96,11 @@ dependencies {
     implementation 'com.scwang.smartrefresh:SmartRefreshHeader:1.1.0'
     implementation 'com.scwang.smartrefresh:SmartRefreshLayout:1.1.0'
     implementation 'androidx.work:work-runtime-ktx:2.7.1'
+    implementation 'com.github.varunest:sparkbutton:1.0.6'
+    implementation 'com.github.f0ris.sweetalert:library:1.6.2'
+
+    implementation "androidx.datastore:datastore-preferences:1.0.0-alpha07"
+    implementation "androidx.datastore:datastore-core:1.0.0-alpha07"
 
     compileOnly 'org.projectlombok:lombok:1.18.12'
     annotationProcessor 'org.projectlombok:lombok:1.18.12'
