--- a/app/build.gradle
+++ b/app/build.gradle
@@ -98,6 +98,8 @@ dependencies {
     implementation 'androidx.work:work-runtime-ktx:2.7.1'
     implementation 'com.github.varunest:sparkbutton:1.0.6'
     implementation 'com.github.f0ris.sweetalert:library:1.6.2'
+    implementation 'com.royrodriguez:transitionbutton:0.2.0'
+    implementation 'com.github.iwgang:countdownview:2.1.6'
 
     implementation "androidx.datastore:datastore-preferences:1.0.0-alpha07"
     implementation "androidx.datastore:datastore-core:1.0.0-alpha07"
