--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,7 +42,7 @@
 
         <activity android:name=".view.ui.activities.LoginActivity" />
         <activity android:name=".view.ui.activities.MainActivity" />
-
+        <activity android:name=".view.ui.activities.BidActivity" />
 
         <service
             android:name=".service.MyFirebaseMessagingService"
