--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,8 +76,22 @@ dependencies {
     implementation 'com.google.firebase:firebase-database-ktx:20.0.5'
     implementation 'com.google.firebase:firebase-database:20.0.5'
     implementation 'com.firebaseui:firebase-ui-firestore:4.3.1'
-    implementation 'com.google.firebase:firebase-messaging'
-    implementation 'com.google.firebase:firebase-analytics'
+    implementation 'com.google.firebase:firebase-messaging:23.0.6'
+    implementation 'com.google.firebase:firebase-analytics:21.0.0'
+    implementation "com.google.android.gms:play-services-auth:20.2.0"
+    implementation 'androidx.work:work-runtime-ktx:2.7.1'
+    // Import the BoM for the Firebase platform
+    implementation platform('com.google.firebase:firebase-bom:30.1.0')
+
+    // Declare the dependencies for the In-App Messaging and Analytics libraries
+    // When using the BoM, you don't specify versions in Firebase library dependencies
+    implementation 'com.google.firebase:firebase-inappmessaging-display-ktx'
+    implementation 'com.google.firebase:firebase-analytics-ktx'
+
+    //Okhttp
+    implementation 'com.squareup.okhttp3:okhttp:3.10.0'
+    //Gson
+    implementation 'com.google.code.gson:gson:2.8.5'
 
 
     implementation 'com.github.MoeidHeidari:banner:1.04'
@@ -100,9 +114,12 @@ dependencies {
     implementation 'com.github.f0ris.sweetalert:library:1.6.2'
     implementation 'com.royrodriguez:transitionbutton:0.2.0'
     implementation 'com.github.iwgang:countdownview:2.1.6'
+    implementation 'com.github.tapadoo:alerter:7.2.4'
 
     implementation "androidx.datastore:datastore-preferences:1.0.0-alpha07"
     implementation "androidx.datastore:datastore-core:1.0.0-alpha07"
+    implementation 'com.google.firebase:firebase-messaging-ktx:23.0.6'
+
 
     compileOnly 'org.projectlombok:lombok:1.18.12'
     annotationProcessor 'org.projectlombok:lombok:1.18.12'
