--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,6 +67,7 @@ dependencies {
     implementation 'com.jaeger.statusbarutil:library:1.5.1'
     implementation 'com.allattentionhere:fabulousfilter:0.0.5'
 
+    //holy fucking firebase
     implementation platform('com.google.firebase:firebase-bom:30.1.0')
     implementation 'com.google.firebase:firebase-analytics-ktx'
     implementation "com.github.ptrbrynt:FirestoreLiveData:1.1.1"
@@ -80,16 +81,15 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics:21.0.0'
     implementation "com.google.android.gms:play-services-auth:20.2.0"
     implementation 'androidx.work:work-runtime-ktx:2.7.1'
-    // Import the BoM for the Firebase platform
     implementation platform('com.google.firebase:firebase-bom:30.1.0')
-
-    // Declare the dependencies for the In-App Messaging and Analytics libraries
-    // When using the BoM, you don't specify versions in Firebase library dependencies
     implementation 'com.google.firebase:firebase-inappmessaging-display-ktx'
     implementation 'com.google.firebase:firebase-analytics-ktx'
 
-    //Okhttp
-    implementation 'com.squareup.okhttp3:okhttp:3.10.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.6.2'
+    implementation 'com.squareup.retrofit2:retrofit:2.6.0'
+    implementation 'com.squareup.okhttp3:okhttp:4.9.3'
+    implementation 'com.squareup.okhttp3:okhttp-urlconnection:4.9.3'
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.9.3'
     //Gson
     implementation 'com.google.code.gson:gson:2.8.5'
 
@@ -119,7 +119,9 @@ dependencies {
     implementation "androidx.datastore:datastore-preferences:1.0.0-alpha07"
     implementation "androidx.datastore:datastore-core:1.0.0-alpha07"
     implementation 'com.google.firebase:firebase-messaging-ktx:23.0.6'
-
+    implementation 'com.squareup.retrofit2:adapter-guava:2.9.0'
+    implementation 'androidx.work:work-runtime:2.8.0-alpha02'
+    implementation("com.google.android.gms:play-services-ads:20.5.0")
 
     compileOnly 'org.projectlombok:lombok:1.18.12'
     annotationProcessor 'org.projectlombok:lombok:1.18.12'
