--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,6 +75,7 @@ dependencies {
     implementation 'com.github.jhonnyx2012:horizontal-picker:1.0.6'
     implementation 'io.github.sangcomz:StickyTimeLine:1.0.0'
     implementation 'com.github.andrefrsousa:SuperToolbar:1.3.0'
+    implementation 'com.ldoublem.GiftCard:giftcardlib:0.3'
 
     //holy fucking firebase
     implementation platform('com.google.firebase:firebase-bom:30.1.0')
@@ -128,6 +129,7 @@ dependencies {
     implementation "androidx.datastore:datastore-core:1.0.0-alpha07"
     implementation 'com.google.firebase:firebase-messaging-ktx:23.0.6'
     implementation 'com.squareup.retrofit2:adapter-guava:2.9.0'
+    implementation 'com.github.takusemba:multisnaprecyclerview:2.0.4'
 
     compileOnly 'org.projectlombok:lombok:1.18.12'
     annotationProcessor 'org.projectlombok:lombok:1.18.12'
