--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,6 +76,7 @@ dependencies {
     implementation 'io.github.sangcomz:StickyTimeLine:1.0.0'
     implementation 'com.github.andrefrsousa:SuperToolbar:1.3.0'
     implementation 'com.ldoublem.GiftCard:giftcardlib:0.3'
+    implementation 'com.github.zzz40500:AndroidSweetSheet:1.1.0'
 
     //holy fucking firebase
     implementation platform('com.google.firebase:firebase-bom:30.1.0')
