--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,6 +77,10 @@ dependencies {
     implementation 'com.github.andrefrsousa:SuperToolbar:1.3.0'
     implementation 'com.ldoublem.GiftCard:giftcardlib:0.3'
     implementation 'com.github.zzz40500:AndroidSweetSheet:1.1.0'
+    implementation 'com.github.rubensousa:gravitysnaphelper:2.2.2'
+    implementation 'com.mxn.soul:flowingdrawer-core:2.1.0'
+    implementation 'com.balysv.materialmenu:material-menu:2.0.0'
+    implementation 'org.nosort.blurdrawerlayout:blurdrawerlayout:1.1.0'
 
     //holy fucking firebase
     implementation platform('com.google.firebase:firebase-bom:30.1.0')
