--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,7 +56,6 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.4.2'
     implementation 'com.google.android.material:material:1.6.1'
 
-
     implementation 'com.google.android.material:material:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'com.airbnb.android:lottie:5.2.0'
@@ -68,19 +67,15 @@ dependencies {
     implementation 'com.allattentionhere:fabulousfilter:0.0.5'
     implementation 'com.squareup.picasso:picasso:2.5.2'
     implementation 'com.crystal:crystalrangeseekbar:1.0.0'
-    implementation 'io.github.sangcomz:StickyTimeLine:1.0.0'
     implementation 'me.rishabhkhanna:CustomToggle:1.0.0'
     implementation 'nl.bryanderidder:themed-toggle-button-group:1.4.1'
     implementation 'com.michalsvec:single-row-calednar:1.0.0'
     implementation 'com.github.jhonnyx2012:horizontal-picker:1.0.6'
-    implementation 'io.github.sangcomz:StickyTimeLine:1.0.0'
     implementation 'com.github.andrefrsousa:SuperToolbar:1.3.0'
     implementation 'com.ldoublem.GiftCard:giftcardlib:0.3'
     implementation 'com.github.zzz40500:AndroidSweetSheet:1.1.0'
     implementation 'com.github.rubensousa:gravitysnaphelper:2.2.2'
-    implementation 'com.mxn.soul:flowingdrawer-core:2.1.0'
-    implementation 'com.balysv.materialmenu:material-menu:2.0.0'
-    implementation 'org.nosort.blurdrawerlayout:blurdrawerlayout:1.1.0'
+    implementation 'com.github.Dimezis:BlurView:version-2.0.2'
 
     //holy fucking firebase
     implementation platform('com.google.firebase:firebase-bom:30.1.0')
@@ -135,6 +130,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-messaging-ktx:23.0.6'
     implementation 'com.squareup.retrofit2:adapter-guava:2.9.0'
     implementation 'com.github.takusemba:multisnaprecyclerview:2.0.4'
+
 
     compileOnly 'org.projectlombok:lombok:1.18.24'
     annotationProcessor 'org.projectlombok:lombok:1.18.24'
