--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,7 +75,8 @@ dependencies {
     implementation 'com.ldoublem.GiftCard:giftcardlib:0.3'
     implementation 'com.github.zzz40500:AndroidSweetSheet:1.1.0'
     implementation 'com.github.rubensousa:gravitysnaphelper:2.2.2'
-    implementation 'com.github.Dimezis:BlurView:version-2.0.2'
+    implementation 'com.github.mmin18:realtimeblurview:1.2.1'
+    implementation 'jp.wasabeef:blurry:4.0.1'
 
     //holy fucking firebase
     implementation platform('com.google.firebase:firebase-bom:30.1.0')
