--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,6 +79,7 @@ dependencies {
     implementation 'jp.wasabeef:blurry:4.0.1'
     implementation 'com.balysv.materialmenu:material-menu:2.0.0'
     implementation 'io.github.bitvale:switcher:1.1.2'
+    implementation 'com.github.maxpilotto:credit-card-view:8.0.0'
 
     //holy fucking firebase
     implementation platform('com.google.firebase:firebase-bom:30.1.0')
